[project]
name = "github-status-pushover"
version = "1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "feedparser==6.0.12",
    "requests==2.32.5",
]
[dependency-groups]
test = [
    "pytest==8.4.2",
    "pytest-mock==3.14.1",
]