[project]
name = "github-status-pushover"
version = "1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "feedparser==6.0.12",
    "requests==2.32.5",
]
[dependency-groups]
test = [
    "pytest==9.0.0",
    "pytest-mock==3.15.1",
]
