[project]
name = "github-status-pushover"
version = "1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "beautifulsoup4==4.15.0",
    "feedparser==6.0.12",
    "requests==2.34.2",
]
[dependency-groups]
test = [
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
]
